tests/error/redeclaring_variable_as_typedef.c
// fail "Redeclaration of different kind."

int a;
typedef int a;

int main(){
    
}
